--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,12 @@
         <module>spark-lambda</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
