--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,21 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
+#java files
+*.class
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 # Exclude maven wrapper
 !/.mvn/wrapper/maven-wrapper.jar
